retail-store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-store-ui
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: retail-store-ui
  template:
    metadata:
      labels:
        app: retail-store-ui
    spec:
      containers:
      - name: ui
        image: innovatemart/retail-store-ui:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: retail-store-ui
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: retail-store-ui
  ports:
    - port: 80
      targetPort: 8080
